--- a/config/config0.yaml
+++ b/config/config0.yaml
@@ -10,8 +10,5 @@ hllMaxPrecision: 16
 hllP: 4
 cmsEpsilon: 0.01
 cmsDelta: 0.01
-bloomFilterExpectedElementsL1: 512
-bloomFilterExpectedElementsL2: 1024
-bloomFilterExpectedElementsL3: 2048
-bloomFilterExpectedElementsL4: 4096
+bloomFilterExpectedElements: [ 512, 1024, 2048, 4096 ]
 bloomFilterFalsePositive: 0.02
