LSM FINALLY DONE JESUS CHRIST

--- a/config/config0.yaml
+++ b/config/config0.yaml
@@ -10,5 +10,5 @@ hllMaxPrecision: 16
 hllP: 4
 cmsEpsilon: 0.01
 cmsDelta: 0.01
-bloomFilterExpectedElements: [ 512, 1024, 2048, 4096 ]
+bloomFilterExpectedElements: [ 512, 1024, 2048, 4096, 8192, 16384, 32728, 65535 ]
 bloomFilterFalsePositive: 0.02
