Added read path

--- a/config/config1.yaml
+++ b/config/config1.yaml
@@ -12,3 +12,4 @@ cmsEpsilon: 0.01
 cmsDelta: 0.01
 bloomFilterExpectedElements: [ 1024,2048, 4096, 8192 ]
 bloomFilterFalsePositive: 0.05
+lsmMaxLevels: 8
