--- a/config/config0.yaml
+++ b/config/config0.yaml
@@ -12,3 +12,4 @@ cmsEpsilon: 0.01
 cmsDelta: 0.01
 bloomFilterExpectedElements: [ 512, 1024, 2048, 4096, 8192, 16384, 32728, 65535 ]
 bloomFilterFalsePositive: 0.02
+lsmMaxLevels: 8
