Almost done delete path

--- a/config/config1.yaml
+++ b/config/config1.yaml
@@ -10,6 +10,6 @@ hllMaxPrecision: 16
 hllP: 4
 cmsEpsilon: 0.01
 cmsDelta: 0.01
-bloomFilterExpectedElements: [ 1024,2048, 4096, 8192 ]
+bloomFilterExpectedElements: [ 1024, 2048, 4096, 8192 ]
 bloomFilterFalsePositive: 0.05
-lsmMaxLevels: 8
+lsmMaxLevels: 4
