--- a/config/config0.yaml
+++ b/config/config0.yaml
@@ -14,3 +14,11 @@ bloomFilterExpectedElements: [ 512, 1024, 2048, 4096, 8192, 16384, 32728, 65535 
 bloomFilterFalsePositive: 0.02
 lsmMaxLevels: 8
 blockSize: 16
+lsmMaxArray:
+  - 6
+  - 6
+  - 6
+lsmReqArray:
+  - 2
+  - 2
+  - 2
