--- a/config/config0.yaml
+++ b/config/config0.yaml
@@ -7,14 +7,20 @@ tokenBucketInterval: 60
 tokenBucketMax: 99999
 hllMinPrecision: 4
 hllMaxPrecision: 16
-hllP: 18
+hllP: 20
 cmsEpsilon: 0.0001
 cmsDelta: 0.0001
-bloomFilterExpectedElements: [ 512, 1024, 2048, 4096, 8192, 16384, 32728, 65535 ]
+bloomFilterExpectedElements: [ 512, 1024, 2048, 4096, 8192, 16384, 32728, 65535, 131070, 262140 ]
 bloomFilterFalsePositive: 0.02
-lsmMaxLevels: 8
+lsmMaxLevels: 10
 blockSize: 16
 lsmMaxArray:
+  - 6
+  - 6
+  - 6
+  - 6
+  - 6
+  - 6
   - 6
   - 6
   - 6
@@ -22,3 +28,9 @@ lsmReqArray:
   - 2
   - 2
   - 2
+  - 4
+  - 4
+  - 4
+  - 8
+  - 8
+  - 8
